--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,6 @@
     <div class="h-10"></div>
 
   </div>
-  <app-root class="container col-lg-6 col lg-offset-3">Cargando...</app-root>
+  <app-root class="container col-lg-6 col lg-offset-3"> </app-root>
   </body>
 </html>
